[package]
name = "petbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["unicode", "derive"] }
unshare_petbox = { path = "../unshare-petbox"}
xdg = "^2.1"
env_logger = "0.10"
#pretty_env_logger = "0.5"
log = "0.4"
libc = "0.2"
nix = { version = "^0.26",features = ["user"] }

[[bin]]
name = "petbox"
path = "src/main.rs"
