[package]
name = "petbox"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
keywords = ["linux", "container", "namespace", "docker", "process"]
description = """
    a lightweight unprivliged namespace container tool
"""
homepage = "https://github.com/ImBearChild/petbox"
documentation = "https://docs.rs/petbox"
categories = ["os::unix-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["unicode", "derive"] }
unshare_petbox = { path = "../unshare-petbox", version = "0.7" }
xdg = "^2.1"
env_logger = "0.10"
#pretty_env_logger = "0.5"
log = "0.4"
libc = "0.2"
nix = { version = "^0.26", features = ["user"] }
thiserror = "1.0"

[[bin]]
name = "petbox"
path = "src/bin/petbox.rs"


[lib]
name = "petbox"
path = "src/lib.rs"
