[package]
name = "unshare_petbox"
description = """
    The low-level interface for linux namespaces (containers)
"""
license = "MPL-2.0"
readme = "README.md"
keywords = ["linux", "container", "namespace", "docker", "process"]
homepage = "https://github.com/ImBearChild/petbox"
documentation = "https://docs.rs/unshare-petbox"
categories = ["os::unix-apis"]
version = "0.7.0"
authors = ["imbearchild@outlook.com","paul@colomiets.name"]
edition = "2018"

[dependencies]
libc = "0.2.93"
nix = "0.20"

[dev-dependencies]
argparse = "0.2.2"
rand = "0.8.3"

[lib]
name = "unshare_petbox"
path = "src/lib.rs"

